@@ -1,3 +1,7 @@
+2003-07-30  Brian Warner  <warner@lothar.com>
+
+	* doc/howto/test-standard.html: document usage of .todo and .skip
+
 2003-07-28  Brian Warner  <warner@lothar.com>
 
 	* twisted/python/_c_dir.c: hush compiler warning
